# AI_Agent_Abgabe

./: README copy.md  README.md  agent_evaluation_smart_goals.md  app.py  inspect_output.txt  inspect_runner.py  main.py  pyproject.toml  repomix-output.xml  test.md  test_output.txt  txt.md
root_agent/: agent.py  output_structure.py  schemas.py
root_agent/subagents/: __init__.py  creation_evaluation_loop.py  creator_agent.py  evaluator_agent.py  insight_extractor_agent.py  video_analyst_agent.py
root_agent/test/: msg.py  scenarios_test.json  testmsg.py
root_agent/tools/: __init__.py  engagement.py  exit_loop.py
